--- a/website/src/theme/Heading/styles.module.css
+++ b/website/src/theme/Heading/styles.module.css
@@ -20,6 +20,14 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+
+  /* Remove the margin from the h1 element... */
+  h1 {
+    margin: 0 !important;
+  }
+
+  /* Apply it to the wrapper instead */
+  margin-bottom: var(--ifm-heading-margin-bottom);
 }
 
 @media (max-width: 767px) {
